--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eazy-tripzy",
-  "author": "Maximiliano Rubino, Ivan Pulido",
+  "author": "Maximiliano Rubino",
   "private": true,
   "version": "0.0.0",
   "type": "module",
